--- a/main.tex
+++ b/main.tex
@@ -5077,6 +5077,370 @@ The entry \(b_{ij}\) for \(j \geq i\) is a cumulative sum of non-negative terms,
 
 Since \(B\) can be seen as a Gram matrix of vectors in an \(n\)-dimensional space, and Gram matrices are positive semidefinite (as they are equivalent to the matrix product \(VV^T\) for some matrix \(V\)), \(B\) is positive semidefinite.
 
+\subsubsection*{Q20: Find the svds of a symmetric matrix \( S \), an orthogonal matrix \( O \), and a vector outer product \( uv^* \).}
+
+Let's solve this step-by-step:
+
+1) Symmetric matrix $S$:
+   $S = U\Sigma U^T$
+   where $U$ is orthogonal and $\Sigma$ is diagonal with real entries.
+
+2) Orthogonal matrix $O$:
+   $O = U\Sigma V^T$
+   where $U = V$ and $\Sigma = I$ (identity matrix).
+
+3) Vector outer product $uv^*$:
+   $uv^* = (\frac{u}{\|u\|})(\|u\|\|v\|)(\frac{v^*}{\|v\|})^T$
+   This is already in SVD form where:
+   \begin{itemize}
+       \item - Left singular vector: $\frac{u}{\|u\|}$
+       \item - Singular value: $\|u\|\|v\|$
+       \item - Right singular vector: $\frac{v}{\|v\|}$
+   \end{itemize}
+
+These are the SVDs for each case.
+
+\subsubsection*{Q21: Let \( A \) be an \( n \times n \) symmetric matrix with distinct eigenvalues \( \lambda_1, \ldots, \lambda_n \) and corresponding orthonormal eigenvectors \( v_1, \ldots, v_n \). Show that the modified matrix \( (I - v_1 v_1^*) A \) has the eigenvalues \( 0, \lambda_2, \ldots, \lambda_n \) and the eigenvectors \( v_1, v_2, \ldots, v_n \), respectively.}
+
+Q8.21: Note that
+\[
+(I - \mathbf{v}_1 \mathbf{v}_1^*) A \mathbf{v}_1 = \lambda_1 (I - \mathbf{v}_1 \mathbf{v}_1^*) \mathbf{v}_1 = \lambda_1 (\mathbf{v}_1 - \mathbf{v}_1) = 0
+\]
+\[
+(I - \mathbf{v}_1 \mathbf{v}_1^*) A \mathbf{v}_j = \lambda_j (I - \mathbf{v}_1 \mathbf{v}_1^*) \mathbf{v}_j = \lambda_j \mathbf{v}_j \quad j > 1.
+\]
+
+\subsubsection*{Q22: Use the svd to prove that the full rank \( m \times n \) matrices are dense in the set of \( m \times n \) matrices.}
+
+Q8.22: Suppose the matrix \( M \) has full svd \( U \Sigma V^* \). Let \( J \) be a diagonal matrix with 1’s along its diagonal and dimensionally matched to \( \Sigma \). Then \( M_\epsilon = U(\Sigma + \epsilon J)V^* \) for \( \epsilon > 0 \) has full rank, and \( \| M_\epsilon - M \|_F = \epsilon \| J \|_F \), which can be made arbitrarily small by taking \( \epsilon \) small.
+
+\subsubsection*{Q23: Every invertible matrix \( M \) has a polar decomposition \( M = AO \) into a product of a positive definite matrix \( A \) and an orthogonal matrix \( O \). Find the polar decomposition in terms of the svd of \( M \). Show that \( O \) is the closest orthogonal matrix to \( M \) in the Frobenius norm. (Hint: Apply Proposition A.7.5.)}
+
+Q8.23: Take the full svd \( M = U \Sigma V^* \) and put \( A = U \Sigma U^* \) and \( O = UV^* \). Then \( A \) is positive definite and \( O \) is orthogonal. Assuming \( M \) is \( n \times n \) and \( W \) is any \( n \times n \) orthogonal matrix, then}
+\[
+\| M - W \|_F^2 = \| M \|_F^2 - 2 \text{tr}(MW^*) + \| W \|_F^2 = \| M \|_F^2 - 2 \text{tr}(MW^*) + n.
+\]
+\noindent The distance is minimized by maximizing \( \text{tr}(MW^*) \). Because all singular values of \( W \) equal 1, Proposition A.7.5 implies \( \text{tr}(MW^*) \leq \sum_i \sigma_i \), where \( \sigma_i \) is the \( i \)th singular value of \( M \). This upper bound is attained by the choice \( W = O = UV^* \). Indeed, then
+\[
+\text{tr}(MW^*) = \text{tr}(U \Sigma V^* V U^*) = \text{tr}(\Sigma).
+\]
+
+\subsubsection*{Q24: Find the svd of the matrix}
+\[
+\begin{pmatrix}
+1 & 0 & 0 \\
+-1 & 1 & 0 \\
+0 & -1 & 1 \\
+0 & 0 & -1
+\end{pmatrix}.
+\]
+Express the singular vectors in terms of sines and cosines.
+
+Q8.24 Let's compute the SVD step-by-step:
+
+1) First, calculate $A^TA$:
+
+   $A^TA = \begin{pmatrix}
+   2 & -1 & 0 \\
+   -1 & 2 & -1 \\
+   0 & -1 & 2
+   \end{pmatrix}$
+
+2) Eigenvalues of $A^TA$ are $\lambda_1 \approx 3.4142$, $\lambda_2 = 2$, $\lambda_3 \approx 0.5858$
+
+3) Singular values: $\sigma_1 \approx 1.8477$, $\sigma_2 \approx 1.4142$, $\sigma_3 \approx 0.7654$
+
+4) Right singular vectors (eigenvectors of $A^TA$):
+
+   $v_1 \approx \begin{pmatrix} 0.5000 \\ 0.7071 \\ 0.5000 \end{pmatrix} = \begin{pmatrix} \frac{1}{2} \\ \frac{1}{\sqrt{2}} \\ \frac{1}{2} \end{pmatrix}$
+
+   $v_2 = \begin{pmatrix} -\frac{1}{\sqrt{2}} \\ 0 \\ \frac{1}{\sqrt{2}} \end{pmatrix}$
+
+   $v_3 \approx \begin{pmatrix} 0.5000 \\ -0.7071 \\ 0.5000 \end{pmatrix} = \begin{pmatrix} \frac{1}{2} \\ -\frac{1}{\sqrt{2}} \\ \frac{1}{2} \end{pmatrix}$
+
+5) Left singular vectors:
+
+   $u_i = \frac{1}{\sigma_i}Av_i$ for $i = 1, 2, 3$
+
+Final SVD:
+
+$A = U\Sigma V^T$
+
+where:
+
+$U \approx \begin{pmatrix}
+0.2706 & -0.5000 & 0.3727 \\
+0.6533 & -0.5000 & -0.1294 \\
+0.6533 & 0.5000 & -0.1294 \\
+0.2706 & 0.5000 & 0.3727
+\end{pmatrix}$
+
+$\Sigma = \begin{pmatrix}
+1.8477 & 0 & 0 \\
+0 & 1.4142 & 0 \\
+0 & 0 & 0.7654 \\
+0 & 0 & 0
+\end{pmatrix}$
+
+$V^T \approx \begin{pmatrix}
+0.5000 & 0.7071 & 0.5000 \\
+-0.7071 & 0 & 0.7071 \\
+0.5000 & -0.7071 & 0.5000
+\end{pmatrix}$
+
+In terms of sines and cosines:
+
+$v_1 = \begin{pmatrix} \frac{1}{2} \\ \cos{\frac{\pi}{4}} \\ \frac{1}{2} \end{pmatrix}$
+
+$v_2 = \begin{pmatrix} -\cos{\frac{\pi}{4}} \\ 0 \\ \cos{\frac{\pi}{4}} \end{pmatrix}$
+
+$v_3 = \begin{pmatrix} \frac{1}{2} \\ -\cos{\frac{\pi}{4}} \\ \frac{1}{2} \end{pmatrix}$
+
+The left singular vectors can be similarly expressed, but are more complex.
+
+\subsubsection*{Q25: Consider a weighted graph with \( n \) nodes and edge weights \( w_{ij} \geq 0 \). The Laplacian \( L \) of the graph is defined to be the difference \( L = D - W \), where \( D \) is diagonal with diagonal entries \( d_{ii} = \sum_{j \neq i} w_{ij} \) and \( W \) has entries \( w_{ij} \). Show that \( L \) is symmetric and positive semidefinite. If the graph is connected, then show that the \( L \) has pseudo-inverse}
+\[
+L^- = \left( L + \frac{11^*}{n} \right)^{-1} - \frac{11^*}{n}.
+\]
+
+(Hints: The associated quadratic form is \( v^*Lv = \sum_i \sum_j w_{ij} (v_i - v_j)^2 \), and \( L1 = 0 \).)
+
+Q8.25: \( L \) is clearly symmetric. Because the associated quadratic
+\[
+\mathbf{v}^* L \mathbf{v} = \sum_i \sum_j w_{ij} (v_i - v_j)^2 \geq 0,
+\]
+\noindent \( L \) is positive semidefinite. Furthermore, \( L \mathbf{1} = 0 \) by definition. Suppose \( L \mathbf{v} = 0 \) for some \( \mathbf{v} = (v_i) \) not a multiple of 1. Let \( S \) be the set \( \{ j : v_j = v_1 \} \). Since \( 0 = \mathbf{v}^* L \mathbf{v} = \sum_i \sum_j w_{ij} (v_i - v_j)^2 \), all neighbors of node 1 belong to \( S \). All neighbors of those neighbors also belong to \( S \), and so forth. Given that the graph is connected, it follows that \( S = \{ 1, \ldots, n \} \). But this gives the contradiction \( \mathbf{v} = v_1 \mathbf{1} \). Thus, the svd \( L = \sum_{i=1}^{n-1} \lambda_i \mathbf{v}_i \mathbf{v}_i^* \) has all singular values \( \lambda_i > 0 \) except \( \lambda_n = 0 \). The pseudo-inverse of \( L \) is
+\[
+L^- = \sum_{i < n} \lambda_i^{-1} \mathbf{v}_i \mathbf{v}_i^*.
+\]
+\noindent On the other hand, the matrix
+\[
+L + \frac{\mathbf{11}^*}{n} = \sum_{i < n} \lambda_i \mathbf{v}_i \mathbf{v}_i^* + \frac{\mathbf{11}^*}{n}
+\]
+\noindent is invertible with inverse
+\[
+\sum_{i < n} \lambda_i^{-1} \mathbf{v}_i \mathbf{v}_i^* + \frac{\mathbf{11}^*}{n} = L^- + \frac{\mathbf{11}^*}{n}.
+\]
+\noindent This completes the proof.
+
+\subsubsection*{Q26: Show that the polynomial \( p(x) = x^n + c_{n-1} x^{n-1} + \cdots + c_1 x + c_0 \) can be expressed as}
+
+\[
+p(x) = \text{det}(xI_n - C)
+\]
+
+\[
+C = \begin{pmatrix}
+0 & 0 & \cdots & 0 & -c_0 \\
+1 & 0 & \cdots & 0 & -c_1 \\
+0 & 1 & \cdots & 0 & -c_2 \\
+\vdots & \vdots & \ddots & \vdots & \vdots \\
+0 & 0 & \cdots & 1 & -c_{n-1}
+\end{pmatrix}.
+\]
+
+Hence, extraction of the roots of \( p(x) \) reduces to the extraction of the eigenvalues of the companion matrix \( C \). (Hint: Prove the formula by induction on \( n \).)
+
+Here's the proof in LaTeX:
+
+Let's prove this by induction on $n$:
+
+1) Base case ($n = 1$):
+   For $n = 1$, $p(x) = x + c_0$
+   $C = [-c_0]$
+   $\det(xI_1 - C) = x - (-c_0) = x + c_0 = p(x)$
+
+2) Inductive step:
+   Assume true for $n-1$. For $n$:
+   
+   $\det(xI_n - C) = 
+   \begin{vmatrix}
+   x & 0 & \cdots & 0 & c_0 \\
+   -1 & x & \cdots & 0 & c_1 \\
+   0 & -1 & \cdots & 0 & c_2 \\
+   \vdots & \vdots & \ddots & \vdots & \vdots \\
+   0 & 0 & \cdots & x & c_{n-1}
+   \end{vmatrix}$
+
+   Expand along first row:
+   $= x \cdot \det(\text{n-1 submatrix}) + (-1)^{n+1} c_0 \cdot \det(\text{last column submatrix})$
+   
+   By induction hypothesis:
+   $= x(x^{n-1} + c_{n-1}x^{n-2} + ... + c_1) + c_0$
+   $= x^n + c_{n-1}x^{n-1} + ... + c_1x + c_0$
+   $= p(x)$
+
+Thus, $p(x) = \det(xI_n - C)$ for all $n$.
+
+\subsubsection*{Q27: Demonstrate that the \(m \times m\) matrix \(A = aI_m + b11^*\) has the eigenvector 1 with eigenvalue \(a + mb\) and \(m - 1\) orthogonal eigenvectors}
+
+\[ u_i = \frac{1}{i - 1} \sum_{j = 1}^{i - 1} e_j - e_i, \]
+
+\[ i = 2, \ldots, m, \]
+
+\text{with eigenvalue \(a\). Under what circumstances is \(A\) positive definite?}
+
+Q8.27: Given that \( A = aI_m + b11^* \) and \( u_i = \frac{1}{i-1} \sum_{j=1}^{i-1} e_j - e_i \), it follows that \( A1 = a1 + mb1 \) and \( Au_i = au_i + \frac{b(i-1)}{i-1} 1 - b1 = au_i \). The matrix \( A \) is positive definite if and only if \( a > 0 \) and \( a + mb > 0 \). The latter condition is equivalent to \( b > -\frac{a}{m} \). To prove orthogonality, first note that \( 1^* u_i = \frac{1}{i-1} \sum_{j=1}^{i-1} 1 - 1 = 0 \). The vector \( u_i \) equals
+\[
+u_i = \left( \frac{1}{i-1} \cdots \frac{1}{i-1} -1 \cdots 0 \right)^*.
+\]
+An easy argument now shows \( u_i^* u_k = 0 \) for \( i \ne k \).
+
+\subsubsection*{Q28: In Jacobi’s eigen-decomposition algorithm, let \(T = \tan(\theta)\), \(C = \cos(\theta)\), and \(S = \sin(\theta)\). Based on equation (8.2) argue that \(r = \frac{c - a}{2b} = \frac{C^2 - S^2}{2CS} = \frac{1 - T^2}{2T}\) and therefore that \(T\) is determined by the quadratic \(T^2 + 2rT - 1 = 0\). Show that this fact implies \(T = \frac{1}{r + \sqrt{1 + r^2}}\), \(C = \frac{1}{\sqrt{1 + t^2}}\), and \(S = TC\) when \(r > 0\).}
+
+Let's solve this step-by-step:
+
+1) From equation (8.2), we have:
+   $r = \frac{c - a}{2b} = \frac{\cos^2\theta - \sin^2\theta}{2\sin\theta\cos\theta} = \frac{C^2 - S^2}{2CS}$
+
+2) Using the identity $\tan\theta = \frac{\sin\theta}{\cos\theta}$, we get:
+   $r = \frac{1 - \tan^2\theta}{2\tan\theta} = \frac{1 - T^2}{2T}$
+
+3) Rearranging this equation:
+   $T^2 + 2rT - 1 = 0$
+
+4) Solving this quadratic equation for $T$:
+   $T = \frac{-2r \pm \sqrt{4r^2 + 4}}{2} = -r \pm \sqrt{1 + r^2}$
+
+   When $r > 0$, we take the positive root:
+   $T = \frac{1}{r + \sqrt{1 + r^2}}$
+
+5) Using the identity $\cos\theta = \frac{1}{\sqrt{1 + \tan^2\theta}}$:
+   $C = \frac{1}{\sqrt{1 + T^2}}$
+
+6) Finally, $S = \tan\theta \cos\theta = TC$
+
+Therefore, when $r > 0$:
+$T = \frac{1}{r + \sqrt{1 + r^2}}$
+$C = \frac{1}{\sqrt{1 + T^2}}$
+$S = TC$
+
+\subsubsection*{Q29: Consider the set \(G\) of real \(2n \times 2n\) matrices \(M\) satisfying \(M^*AM = A\), where}
+
+\[ A = \begin{pmatrix} 0 & I_n \\ -I_n & 0 \end{pmatrix}. \]
+
+\text{Show that (a) \(A\) is invertible with \(\det A = 1\), (b) \(G\) is a group under matrix multiplication, and (c) all \(M \in G\) have \(\det M = \pm 1\). Actually, \(\det M = 1\), but this is harder to prove.}
+
+Q8.29: When \( n = 1 \), \( \det A = 0^2 - 1(-1) = 1 \). In general,
+\[
+\det \begin{pmatrix}
+0 & I_n \\
+-I_n & 0
+\end{pmatrix}
+= (-1)^n \det \begin{pmatrix}
+I_n & 0 \\
+0 & -I_n
+\end{pmatrix}
+= (-1)^n \det I_n \det(-I_n)
+= (-1)^{2n} (\det I_n)^2
+= 1.
+\]
+Note that \( I_{2n} \) serves as the identity element \( G \). Matrix multiplication is associative so \( G \) is associative. Taking determinants in the defining equation gives
+\[
+(\det M)^2 \det A = \det A.
+\]
+It follows that \( \det M = \pm 1 \). Hence, all elements of \( G \) are invertible. Multiplying the defining equation on the left by \( (M^*)^{-1} \) and on the right by \( M^{-1} \) shows \( G \) is closed under matrix inversion. Suppose both \( M \) and \( N \) belong to \( G \). Then
+\[
+(MN)^* A (MN) = N^* M^* A MN = N^* AN = A
+\]
+shows that \( G \) is closed under matrix multiplication.
+
+\subsubsection*{Q30: Prove that the positive definite square root of a positive definite matrix \(A\) is unique.}
+
+Q8.30: Let \( B \) and \( C \) be two different positive definite square roots of \( A \). Choose a unit eigenvector \( \mathbf{v} \) of \( B - C \) with eigenvalue \( \mu \neq 0 \). Then
+\[
+0 = \mathbf{v}^*(A - A)\mathbf{v}
+= \mathbf{v}^*(B - C)B\mathbf{v} + \mathbf{v}^*C(B - C)\mathbf{v}
+= \mu \mathbf{v}^*(B + C)\mathbf{v}
+\]
+implies that \( \mu = 0 \), contradicting the assumption \( \mu \neq 0 \).
+
+\subsubsection*{Q31: Prove that the map \(A \mapsto \sqrt{A}\) is continuous on positive semidefinite matrices. Now consider two \(m \times m\) positive definite matrices \(A\) and \(B\) with spectra contained in \([\delta, \infty)\). Show that the positive definite square roots of these matrices satisfy}
+
+\[ \| \sqrt{A} - \sqrt{B} \| \leq \frac{1}{2\sqrt{\delta}} \| A - B \|. \]
+
+Q8.31: Because the scalar square root function is continuous on \([0, \infty)\), to establish continuity, it suffices to show that \(\|A - B\|_F \geq \|\lambda - \mu\|\), where \(\lambda\) and \(\mu\) are the vectors whose components \(\lambda_i\) and \(\mu_i\) are the ordered eigenvalues of \(A\) and \(B\). Fortunately, this claim follows from Von Neumann’s trace inequality (Proposition A.7.5) and the calculations
+\[
+\|A - B\|_F^2 = \|A\|_F^2 - 2 \operatorname{tr}(AB) + \|B\|_F^2 \geq \sum_i \lambda_i^2 - 2 \sum_i \lambda_i \mu_i + \sum_i \mu_i^2 = \sum_i (\lambda_i - \mu_i)^2.
+\]
+Furthermore, for any unit vector \(\mathbf{v}\) the inequality
+\[
+\|\sqrt{A}\mathbf{v}\|^2 = \mathbf{v}^*A\mathbf{v} \geq \delta
+\]
+implies \(\|\sqrt{A}\| \geq \sqrt{\delta}\). To attack uniform continuity, choose a unit eigenvector \(\mathbf{v}\) of \(\sqrt{A} - \sqrt{B}\) with eigenvalue \(\omega\). Then
+\[
+\mathbf{v}^*(A - B)\mathbf{v} = \mathbf{v}^*(\sqrt{A} - \sqrt{B})\sqrt{A}\mathbf{v} + \mathbf{v}^*\sqrt{B}(\sqrt{A} - \sqrt{B})\mathbf{v} = \omega \mathbf{v}^*(\sqrt{A} + \sqrt{B})\mathbf{v}.
+\]
+It follows that
+\[
+\omega = \frac{\mathbf{v}^*(A - B)\mathbf{v}}{\mathbf{v}^*(\sqrt{A} + \sqrt{B})\mathbf{v}} \leq \frac{\|A - B\|\|\mathbf{v}\|^2}{\sqrt{\delta}\|\mathbf{v}\|^2 + \sqrt{\delta}\|\mathbf{v}\|^2} \leq \frac{\|A - B\|}{2\sqrt{\delta}}.
+\]
+From the relationship of the Rayleigh quotient and spectral norm. If the dominant eigenvalue of \(\sqrt{A} - \sqrt{B}\) is nonnegative, then choose \(\omega\) equal to it. If the dominant eigenvalue of \(\sqrt{A} - \sqrt{B}\) is negative, then replace \(\sqrt{A} - \sqrt{B}\) by \(\sqrt{B} - \sqrt{A}\).
+
+\subsubsection*{Q32: A normal matrix \(M\) commutes with its transpose. For instance, every symmetric matrix is normal. If \(M\) is normal with polar decomposition \(M = AO\), then demonstrate that \(AO = OA\).}
+
+Q8.32: Because \(A = A^*\), taking square roots in
+\[
+O^* A^* AO = M^* M = MM^* = AOO^* A^* = AA^*
+\]
+implies \(O^* AO = A\), and multiplying by \(O\) on the left then gives the desired result.
+
+\subsubsection*{Q33: Problem 3 of Chapter 5 demonstrates that the set of invertible \(m \times m\) upper triangular matrices forms a mathematical group \(G\). The subset of \(G\) with positive diagonal entries constitutes a subgroup \(H\), which can be used to decompose \(G\) into disjoint subsets called cosets. There are left cosets and right cosets. The left cosets \(gH = \{gh : h \in H\}\) can be constructed by considering the diagonal matrices with entries of \(\pm 1\). (These also form a subgroup.) Let \(g_S\) denote such a matrix with \(-1\) in precisely the positions determined by the index set \(S\). Show that the coset \(g_SH\) consists of those matrices in \(G\) with negative diagonal entries determined by \(S\) and positive diagonal entries elsewhere. Also show that \(g_SH\) coincides with the right coset \(Hg_S\). Multiplying a left coset \(g_SH\) by an element \(g_T\) on the left produces the left coset \((g_Tg_S)H\). Likewise, multiplying a right coset \(Hg_S\) by an element \(g_T\) on the right produces the right coset \(H(g_Sg_T)\). The proof of Proposition 8.7.2 claims that the matrix \(T_k = \Delta^k (R_k \cdots R_2 R_1) (\Lambda^k U)^{-1} \Delta\) has positive diagonal entries. Given the current discussion, verify this fact.}
+
+Here's the solution in LaTeX:
+
+1) Let $g_S \in G$ be a diagonal matrix with -1 in positions determined by set $S$ and 1 elsewhere.
+
+2) For any $h \in H$, $g_Sh$ will have:
+   - Negative diagonal entries for positions in $S$
+   - Positive diagonal entries elsewhere
+   
+   This proves $g_SH$ consists of matrices in $G$ with diagonal entries as described.
+
+3) To show $g_SH = Hg_S$:
+   For any $h \in H$, $g_Sh = hg_S$ because:
+   - Diagonal elements commute
+   - Off-diagonal elements of $g_S$ are 0
+
+4) Left multiplication: $g_T(g_SH) = (g_Tg_S)H$
+   Right multiplication: $(Hg_S)g_T = H(g_Sg_T)$
+
+5) For $T_k = \Delta^k (R_k \cdots R_2 R_1) (\Lambda^k U)^{-1} \Delta$:
+   
+   - $\Delta$ has positive diagonal entries
+   - $R_k \cdots R_2 R_1$ are rotation matrices with determinant 1
+   - $\Lambda$ is diagonal with positive entries
+   - $U$ is orthogonal
+   
+   Therefore, $T_k$ is a product of matrices from $H$, so it must have positive diagonal entries.
+
+This verifies the claim in Proposition 8.7.2.
+
+\subsubsection*{Q34: The \(m\) vectors \(\mathbf{w}_1, \ldots, \mathbf{w}_m\) in \(\mathbb{R}^n\) define the parallelepiped}
+
+\[ P = \left\{ \sum_{i=1}^m t_i \mathbf{w}_i : t_i \in [0, 1] \, \forall \, i \right\} \]
+and the \(n \times m\) matrix \(W\) whose \(i\)th column is \(\mathbf{w}_i\). Note that \(P = WC\) is the image of the unit cube \(C\) in \(\mathbb{R}^m\) under the linear map \(x \mapsto Wx\). Assuming \(m \leq n\), show that the volume of \(P\) within the subspace \(S\) spanned by the \(\mathbf{w}_i\) satisfies \(\text{vol}(P) = \sqrt{\det(W^*W)}\). This result is pertinent to defining surface area.
+
+Q8.34: Let \(W = UDV^*\) be the full svd of \(W\). The transformation \(W = VDU^*\) is a composition of three maps. The first \(x \mapsto V^* x\) preserves the volume of \(C\) because \(V^*\) preserves lengths and angles. The second \(y \mapsto Dy\) takes \(V^* x\) into
+\[
+\begin{pmatrix}
+EV^* x \\
+0
+\end{pmatrix},
+\]
+where \(E\) denotes the \(m \times m\) upper left corner of \(D\). This transformation magnifies the volume of \(V^* C\) by the factor \(\prod_{i=1}^m d_i\), where \(d_i\) is the \(i\)th diagonal entry of \(D\). The third transformation \(x \mapsto Ux\) preserves the volume of \(DU^* C\) within \(S\). To finish the proof, note that
+\[
+\det(W^* W) = \det(VD^* DV^*) = \det(D^* D) = \prod_{i=1}^m d_i^2.
+\]
+
+\subsubsection*{Q35: Consider two \(n \times n\) matrices \(A\) and \(B\). Prove that any eigenvalue \(\lambda\) of \(AB\) is an eigenvalue of \(BA\) and vice versa. (Hint: Consider the two cases \(\lambda \neq 0\) and \(\lambda = 0\) separately.)}
+
+Q8.35: If \(v\) is an eigenvector of \(AB\) with eigenvalue \(\lambda \neq 0\), then \(Bv \neq 0\), and
+\[
+\lambda Bv = B(AB)v = (BA)Bv.
+\]
+It follows that \(Bv\) is an eigenvector of \(BA\) with the same eigenvalue. If \(0\) is an eigenvalue of \(AB\), then \(0 = \det(AB) = \det(A)\det(B) = \det(BA)\), so \(0\) is also an eigenvalue of \(BA\).
+
 \newpage
 \section*{Chapter 9: MM Algorithms}
 \subsubsection*{Q1: In a majorization-minimization algorithm with objective function \(f(x)\) and surrogate function \(g(x \mid x_n)\), show that the sequence \(g(x_{n+1} \mid x_n)\) decreases.}
